# shirafuka-backup-system

./: .gitignore  CMakeLists.txt  README.md  app.rc  resources.qrc  shirafuka-backup-system.pro
resources/: icons.qrc
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/backup/: BackupEngine.cpp  BackupEngine.h  BackupScheduler.cpp  BackupScheduler.h  BackupTask.cpp  BackupTask.h
src/config/: ConfigManager.cpp  ConfigManager.h
src/models/: BackupConfig.cpp  BackupConfig.h
src/scheduler/: BackupScheduler.cpp  BackupScheduler.h
src/ui/: BackupCard.cpp  BackupCard.h  BackupDialog.cpp  BackupDialog.h  BackupListDelegate.cpp  BackupListDelegate.h  FolderSelector.h  LogViewerDialog.cpp  LogViewerDialog.h  ScheduleSettingsDialog.cpp  ScheduleSettingsDialog.h  SettingsDialog.cpp  SettingsDialog.h
src/utils/: FileSystem.cpp  FileSystem.h  Logger.cpp  Logger.h
tests/: BackupEngineTest.cpp  FileSystemTest.cpp
